--- a/notebooks_interpretation/20200330_COVID19Test_fluplate/PlotsFluPlate_ScienionData.ipynb
+++ b/notebooks_interpretation/20200330_COVID19Test_fluplate/PlotsFluPlate_ScienionData.ipynb
@@ -336,9 +336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:serocovid]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-serocovid-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
